--- a/subprojects/gradle-wrapper/wrapper.gradle
+++ b/subprojects/gradle-wrapper/wrapper.gradle
@@ -6,4 +6,4 @@ dependencies {
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
 }
 
-manifest.mainAttributes("Main-Class": 'org.gradle.wrapper.WrapperMain')
+manifest.mainAttributes("Main-Class": 'org.gradle.wrapper.GradleWrapperMain')
