--- a/subprojects/gradle-core/core.gradle
+++ b/subprojects/gradle-core/core.gradle
@@ -17,26 +17,13 @@ dependencies {
     // Needed by the eclipse plugin
     compile "dom4j:dom4j:1.6.1@jar", "jaxen:jaxen:1.1@jar"
 
-    compile "org.mortbay.jetty:jetty:6.1.21@jar",
-            "org.mortbay.jetty:jetty-plus:6.1.21@jar",
-            "org.mortbay.jetty:jetty-util:6.1.21@jar",
-            "javax.servlet:servlet-api:2.5@jar"
-
-    // todo - the transtive dependencies should be runtime dependencies
-    // todo jsp stuff should be bundled
-    runtime "org.mortbay.jetty:jsp-api-2.1:6.1.14@jar",
-                "org.mortbay.jetty:jsp-2.1:6.1.14@jar",
-                "org.eclipse.jdt:core:3.1.1@jar",
-                "org.mortbay.jetty:jetty-naming:6.1.21@jar",
-                "org.mortbay.jetty:jetty-annotations:6.1.21@jar"
-
     compile "org.apache.ivy:ivy:2.1.0-rc2@jar", "jsch:jsch:0.1.31@jar"
 
     compile "net.sf.jopt-simple:jopt-simple:2.4.1@jar",
             libraries.ant,
             "org.apache.ant:ant-nodeps:1.7.0@jar",
             "ch.qos.logback:logback-classic:0.9.17@jar",
-            "org.slf4j:slf4j-api:1.5.8@jar",
+            libraries.slf4j_api,
             "org.slf4j:jul-to-slf4j:1.5.8@jar",
             "ch.qos.logback:logback-core:0.9.17@jar",
             libraries.commons_io,
