Extracted gradle-code-quality subproject out of gradle-core.

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ include 'core'
 include 'wrapper'
 include 'launcher'
 include 'jetty'
+include 'codeQuality'
 include 'ui'
 include 'openApi'
 include 'docs'
