--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ import org.apache.tools.ant.taskdefs.condition.Os
 import org.gradle.api.artifacts.repositories.WebdavResolver
 
 import org.gradle.build.samples.WrapperProjectCreator
-import org.gradle.build.startscripts.StartScriptsGenerator
 import org.apache.ivy.plugins.resolver.*
 
 /**
@@ -280,7 +279,7 @@ task integTest(type: AntTest, dependsOn: [intTestImage, binZip, allZip, srcZip, 
     include 'org/gradle/integtests/**/*IntegrationTest.*'
 
     testClassesDir = project(':core').sourceSets.test.classesDir
-    classpath = project(':core').sourceSets.test.runtimeClasspath + project(':jetty').sourceSets.test.runtimeClasspath
+    classpath = project(':core').sourceSets.test.runtimeClasspath + project(':jetty').sourceSets.test.runtimeClasspath + project(':codeQuality').sourceSets.test.runtimeClasspath
     testResultsDir = file('build/test-results')
     testReportDir = file('build/reports/tests')
     testSrcDirs = []
