various native test improvements / fixes

--- a/src/toplevel/plugin.properties
+++ b/src/toplevel/plugin.properties
@@ -24,3 +24,4 @@ maven=org.gradle.api.plugins.MavenPlugin
 project-reports=org.gradle.api.plugins.ProjectReportsPlugin
 code-quality=org.gradle.api.plugins.quality.CodeQualityPlugin
 scala=org.gradle.api.plugins.scala.ScalaPlugin
+staging=org.gradle.api.plugins.StagingPlugin
