--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-#Mon Jul 20 10:13:13 CEST 2009
-previousMinor=8
-previousRevision=0
-previousMajor=0
+#properties
+#Mon Nov 16 07:56:40 EST 2009
+previousVersion=0.8
+nextVersion=0.9
